Industrialization
Added automatic unit-test.
Added documentation.
Enhanced  PR validation workflow.